--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,13 @@ server.servlet.context-path=/users
 # --- SPRING ---
 spring.main.allow-circular-references=true
 
+# --- Configuration de EmailSender ---
+spring.mail.default-encoding=UTF-8
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=nadhem.belhadj.abdallah@gmail.com
+spring.mail.password=************
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
